# c

datatype/: datatype.c
epoll/: CMakeLists.txt  Makefile  epoll.c  epoll.cpp
glfw/: CMakeLists.txt
glfw/triangle/: main.cpp
ogl/: Makefile  window.c
pipe/: CMakeLists.txt  main.cpp
stdio/: Makefile  _stdio.c
string/: Makefile  string.c
