CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(glfw)

SET(CMAKE_CXX_STANDARD 14)

#-lGL -lGLU -lglfw3 -lX11 -lXxf86vm -lXrandr -lpthread -lXi
LINK_LIBRARIES(GL)
LINK_LIBRARIES(GLU)
LINK_LIBRARIES(GLEW)
LINK_LIBRARIES(glfw3)
LINK_LIBRARIES(dl)
LINK_LIBRARIES(X11)
LINK_LIBRARIES(Xxf86vm)
LINK_LIBRARIES(Xrandr)
LINK_LIBRARIES(pthread)
LINK_LIBRARIES(Xi)

ADD_EXECUTABLE(glfw triangle/main.cpp)